# job-application-tracker

./: .coveragerc  .dockerignore  .flake8  .gitignore  Jenkinsfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  runserver  webpack.config.js
.githooks/: pre-commit
.github/workflows/: pylint.yml
applications/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
applications/migrations/: 0001_initial.py  0002_alter_jobapplication_user.py  0003_alter_jobapplication_posting.py
applications/static/applications/css/: applications.css
applications/static/applications/js/: applications.js
applications/templates/: ApplicationDetails.html  ApplicationList.html
applications/tests/: test-authenticated-user.py  test_authenticated_user.py  test_models.py  test_unauthenticated_user.py
applications_api/: apps.py  serializers.py  urls.py  views.py
applications_api/tests/: test_authenticated_user.py  test_unauthenticated_user.py
applications_api/tests/fixtures/: job_applications.json  users.json
core/: test.py
core/tests/: mixins.py
core/tests/fixtures/: users.json
core/views/: mixins.py
docker/py-wsgi/: Dockerfile  Dockerfile.prod  entrypoint.sh  gunicorn.config.py
docker/web/: nginx.conf
job_application_tracker/: asgi.py  context_processors.py  settings.py  urls.py  utils.py  views.py  wsgi.py
job_application_tracker/tests/: test_errors.py  test_utils.py  test_views.py
samples/: env.sample
static/: .gitignore
static/css/: index.css
static/images/: aviacion-ejercito.webm
static/js/: index.jsx  logout.js
static/scss/: custom.scss  logout.scss  navbar.scss  pages.scss
templates/: 400.html  403.html  404.html  500.html  about.html  home.html  master.html  navbar.html
templates/django/forms/: div.html  field.html  p.html  ul.html
templates/django/forms/errors/list/: ul.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html
unemployment/: asgi.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: confirm_email_verification_code.html  email_confirm.html  user-master.html  verification_sent.html
users/templates/allauth/elements/: field.html  form.html  h2.html
users/templates/allauth/layouts/: base.html
users/templates/registration/: edit_profile.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
users/tests/: test_authenticated_user.py  test_models.py  test_unauthenticated_changeuserpasswordview.py  test_unauthenticated_confirmemailview.py  test_unauthenticated_editprofileview.py  test_unauthenticated_loginview.py  test_unauthenticated_signupview.py  test_unauthenticated_user.py  test_unauthenticated_userresetview.py  test_usersignalhandler.py
